# nexus-tutorial

exercise0/: CMakeLists.txt
exercise0/mac/: vis.mac
exercise0/src/: CMakeLists.txt  DetectorConstruction.cpp
exercise1/: CMakeLists.txt
exercise1/mac/: vis.mac
exercise1/src/: CMakeLists.txt  PrimaryGeneration.cpp  PrimaryGeneration.h
exercise2/: CMakeLists.txt  Exercise2.cpp
exercise2/mac/: vis.mac
exercise2/src/: CMakeLists.txt  EventAction.cpp  RunAction.cpp  SteppingAction.cpp  SteppingAction.h  TrackingAction.cpp
